fix for safari overflow:hidden reverse

--- a/Scss/_additional.scss
+++ b/Scss/_additional.scss
@@ -5,11 +5,6 @@
     box-sizing: border-box;
 }
 
-html,
-body {
-    overflow: hidden;
-} 
-
 #particles-js{
     background: radial-gradient(
         rgba(0, 105, 117, .9), 
